@@ -1220,3 +1220,4 @@
 2013-04-08  Rafael Antognolli
 
         * Fix layout_example_02.
+        * Fix hoversel_example_01.
